[SW-289] Fix vertical scroll on mobile and tablet

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -562,7 +562,7 @@
 
     /*------- Main Header Section ------- */
     .containerScroll {
-        touch-action: none;
+        touch-action: pan-y;
     }
 
     .mountainStep {
